# SnakeGame

./: .gitignore  CMakeLists.txt  report.md
src/: Fruit.cpp  Game.cpp  GameOverScreen.cpp  GameScreen.cpp  MenuScreen.cpp  Screen.cpp  SettingScreen.cpp  Snake.cpp  SnakeBodyNode.cpp  SnakeHeadNode.cpp  SnakeNode.cpp  main.cpp
src/include/: Fruit.h  Game.h  GameOverScreen.h  GameScreen.h  MenuScreen.h  Screen.h  SettingScreen.h  Snake.h  SnakeBodyNode.h  SnakeHeadNode.h  SnakeNode.h
